third_party/move/move-compiler-v2/tests/checking/typing/duplicate_function_parameter_names.exp

Diagnostics:
error: duplicate declaration of `x`
  ┌─ tests/checking/typing/duplicate_function_parameter_names.move:2:21
  │
2 │     fun foo(x: u64, x: u64) {}
  │                     ^

note: previous declaration of `x`
  ┌─ tests/checking/typing/duplicate_function_parameter_names.move:2:13
  │
2 │     fun foo(x: u64, x: u64) {}
  │             ^

error: duplicate declaration of `x`
  ┌─ tests/checking/typing/duplicate_function_parameter_names.move:2:29
  │
2 │     fun foo(x: u64, x: u64) {}
  │                             ^^

note: previous declaration of `x`
  ┌─ tests/checking/typing/duplicate_function_parameter_names.move:2:29
  │
2 │     fun foo(x: u64, x: u64) {}
  │                             ^^
